BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/BMSNeedToEventInheritance__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details what should be copied to an activity when a new activity budget is added</description>
    <fields>
        <fullName>Applicable_Need_Record_Types__c</fullName>
        <description>The developer names of the need activity types that should activate inheritance</description>
        <inlineHelpText>The developer names of the need activity types that should activate inheritance</inlineHelpText>
        <label>Applicable Need Record Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_Field_Mapping_2__c</fullName>
        <label>Header Field Mapping 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_Field_Mapping_3__c</fullName>
        <label>Header Field Mapping 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_Field_Mapping_4__c</fullName>
        <label>Header Field Mapping 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Header_Field_Mapping__c</fullName>
        <description>These fields will be copied from the need to the event. The format should be sourceField:activityField;sourceField2:activityField2...</description>
        <inlineHelpText>These fields will be copied from the need to the event. The format should be sourceField:activityField;sourceField2:activityField2...</inlineHelpText>
        <label>Header Field Mapping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inherit_Expense_Esimates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, when the need is inherited, the existing expense estimates on the event will be deleted and the expense estimates on the need will be copied over to the activity.</description>
        <inlineHelpText>If this box is checked, when the need is inherited, the existing expense estimates on the event will be deleted and the expense estimates on the need will be copied over to the activity.</inlineHelpText>
        <label>Inherit Expense Esimates?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inherit_Participants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked, the participants on the need will be copied to the activity.</description>
        <inlineHelpText>If this box is checked, the participants on the need will be copied to the activity.</inlineHelpText>
        <label>Inherit Participants?</label>
        <type>Checkbox</type>
    </fields>
    <label>BMSNeedToEventInheritance</label>
</CustomObject>